Add Google AdSense meta tag to index.html
Added Google AdSense meta tag for monetization.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 
-
+     <meta name="google-adsense-account" content="ca-pub-9026515130199488">
 
 
 
@@ -190,6 +190,7 @@
         }
     </script>
 </body>
+
 
 
 </html>
