--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     gtag('config', 'G-E6FX97WVER');
 </script>
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9026515130199488"
+    crossorigin="anonymous"></script>
+
 
 <head>
     <meta charset="UTF-8">
@@ -32,7 +35,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 
-     <meta name="google-adsense-account" content="ca-pub-9026515130199488">
+
 
 
 
@@ -190,7 +193,6 @@
         }
     </script>
 </body>
-
 
 
 </html>
